# nonprehensile-object-transp

./: README.md
kdl_ros_control/: CMakeLists.txt  package.xml
kdl_ros_control/include/kdl/: chainidsolver_recursive_newton_euler.cpp
kdl_ros_control/include/kdl_ros_control/: kdl_control.h  kdl_object.h  kdl_planner.h  kdl_robot.h  utils.h
kdl_ros_control/lib/: liborocos-kdl.so.1.4.0
kdl_ros_control/src/: kdl_control.cpp  kdl_object.cpp  kdl_object_test.cpp  kdl_planner.cpp  kdl_robot.cpp
kdl_ros_control/src/alglib/: alglibinternal.cpp  alglibmisc.cpp  ap.cpp  linalg.cpp  optimization.cpp  solvers.cpp
models/cuboid/: CMakeLists.txt  package.xml
models/cuboid/meshes/collision/: cube.stl
models/cuboid/meshes/visual/: cube.dae
models/cuboid/urdf/: cuboid.gazebo.xacro  cuboid.urdf.xacro
models/lbr_iiwa/lbr_iiwa_control/: CMakeLists.txt  (+1 more)
models/planar_end_eff/: CMakeLists.txt  package.xml
models/planar_end_eff/meshes/collision/: planar_end_eff_collision.stl
models/planar_end_eff/meshes/visual/: planar_end_eff_visual.blend  planar_end_eff_visual.blend1
models/planar_end_eff/urdf/: materials.xacro  planar_end_eff.gazebo.xacro  planar_end_eff.urdf.xacro
nonprehensile-object-transp-ros-pkg/: CMakeLists.txt  package.xml
nonprehensile-object-transp-ros-pkg/src/: nonprehensile-object-transp-iiwa_node.cpp
shared-control-balancing/: CMakeLists.txt  package.xml
shared-control-balancing/src/: shared-control-balancing-iiwa_node.cpp  shared-control-balancing-rrbot_node.cpp  shared-control-test-input_device.cpp  vrep-shared-control-balancing_node.cpp
(+11 files in other folders)
